# prd

./: .gitignore  LICENSE  README.md  literature_manager.py  pyproject.toml  test_literature_manager.py
scripts/windows/: build_windows_exe.ps1  literature-manager.iss
